# mess

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  publish.yaml  release.yaml  unittest.yaml
docs/: _config.yml  batching.ipynb  boys_function.ipynb  gammanu.ipynb  gto_integrals.ipynb  optim.ipynb  quadrature.ipynb  quirks.ipynb  tour.ipynb
mess/: __init__.py  autograd_integrals.py  basis.py  binom_factor_table.py  hamiltonian.py  integrals.py  interop.py  mesh.py  numerics.py  orbital.py  orthnorm.py  plot.py  primitive.py  scf.py  special.py  structure.py  types.py  units.py  xcfunctional.py  zeropad_integrals.py
test/: conftest.py  test_autograd_integrals.py  test_benchmark.py  test_hamiltonian.py  test_integrals.py  test_interop.py  test_special.py  test_xcfunctional.py
