[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mess-jax"
authors = [{ name = "Hatem Helal", email = "hatem@valencelabs.com" }]
description = "MESS: Modern Electronic Structure Simulations"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "equinox",
  "jax[cpu]",
  "jaxtyping",
  "more-itertools",
  "optax",
  "optimistix",
  "pandas",
  "periodictable",
  "pyarrow",
  "pyscf",
  "py3Dmol",
  "basis_set_exchange",
  "sympy",
  "importlib-resources",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "jupyter-book",
  "tqdm",
  "ipywidgets",
  "pytest",
  "pytest-benchmark",
  "pre-commit",
  "ruff",
  "mdformat-gfm",
  "seaborn",
]

[project.urls]
Website = "https://github.com/valence-labs/mess"
"Source Code" = "https://github.com/valence-labs/mess"
"Bug Tracker" = "https://github.com/valence-labs/mess/issues"
Documentation = "https://valence-labs.github.io/mess/"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
fallback_version = "dev"

[tool.pytest.ini_options]
addopts = "-s -v --durations=10"
filterwarnings = [
  "error",
  'ignore:Since PySCF\-2\.3, B3LYP \(and B3P86\) are changed.*:UserWarning',
  'ignore:Function mol\.dumps drops attribute spin.*:UserWarning',
  'ignore:scatter inputs have incompatible types.*:FutureWarning'
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E741"]
